--- a/Blogr.css
+++ b/Blogr.css
@@ -2345,7 +2345,7 @@ body{
 
 }
 
-@media(min-width: 1282px) and (max-width: 1560px){
+@media(min-width: 1282px){
 
     a{
         text-decoration: none;
@@ -2801,465 +2801,3 @@ body{
     }
 
 }
-
-/* @media(min-width: 375px) and (max-width: 1440px){
-    body{
-        background-color: hsl(0, 0%, 98%);
-        margin: 0px;
-        align-items: center;
-        min-height: 100vh;
-        line-height: 1;
-        color: hsl(0, 0%, 8%);
-        font-weight:lighter;
-        font-family: Overpass;
-        font-size: 0.9rem;
-        position: relative;
-        max-width: 100%;
-    }
-
-    a{
-        text-decoration: none;
-        cursor: pointer;
-        color: hsl(0, 0%, 98%);
-        font-size: 15px;
-    }
-    
-    ul{
-        list-style-type: none;
-    }
-    
-    a:hover{
-        transform: translateY(-2px);
-        transition: all .3s ease;
-    }
-
-    #top-nav{
-        display: none;
-    }
-
-    #right{
-        display: none;
-    }
-    
-    
-    button{
-        cursor: pointer;
-    }
-    
-    #left{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: absolute;
-        width: 100%;
-        top: 25px;
-    }
-
-    #left .logo{
-        margin-left: 40px;
-        height: 40px;
-        width: 100px;
-    }
-    
-    
-    #top-section{
-        background-color: hsl(356, 100%, 66%);
-        color: white;
-        position: relative;
-        height: 700px;
-        overflow: hidden;
-        border-bottom-left-radius: 150px;
-    }
-
-    #top-section .top-image{
-        position: absolute;
-        height: 1500px;
-        width: 1500px;
-        margin-top: -350px;
-        overflow: hidden;
-        top: 0;
-        margin-left: -350px;  
-    }
-    
-    
-    #top-content{
-        text-align: center; 
-        height: 500px;
-        position: absolute;
-        margin-top: 50px;
-    }
-    
-    h1{
-        font-size: 3.8rem;
-        padding: 0 40px;
-        line-height: 70px;
-    }
-    
-    #top-content p{
-        font-size: 2rem;
-        margin-top: -40px;
-        margin-bottom: 30px;
-        padding: 0 48px;
-    }
-    
-
-    #top-sect-content{
-        margin-top: 50px;
-    }
-
-    #top-section-buttons{
-        padding-top: 45px;
-        width: 70%;
-        display: flex;
-        justify-content: space-between;
-        margin: 0 auto;
-       
-    }
-
-    #top-section-buttons button{
-        padding: 1.2rem 3rem;
-        border-radius: 50px;
-        font-size: 1.3rem;
-        border: none;
-    }
-    
-    #top-section-buttons .start{
-        color: hsl(356, 100%, 66%);
-        background-color: hsl(0, 0%, 98%);
-        font-weight: bold;
-    }
-    
-    #top-section-buttons .start:active{
-        background-color: hsl(356, 100%, 66%);
-        color: hsl(0, 0%, 98%);
-        transition: all 0.2s ease-in-out;
-    }
-    
-    
-    #top-section-buttons .learn{
-        color: hsl(0, 0%, 98%);
-        background-color: hsl(356, 100%, 66%);
-        font-weight: bold;
-        border: 1px solid hsl(0, 0%, 98%);;
-    }
-    
-    #top-section-buttons .learn:active{
-        background-color: hsl(0, 0%, 98%);
-        color: hsl(356, 100%, 66%);
-        transition: all 0.2s ease-in-out;
-    }
-    
-    #top-section-buttons .learn:hover{
-        background-color: hsl(355, 100%, 74%);
-        transition: all 0.2s ease-in-out;
-    }
-
-    .toggle{
-        display: block;
-        margin-right: 40px;
-        display: flex;
-        align-items: center;
-    }
-
-    .toggle .ham{
-        margin-right: -35px;
-    }
-
-    .close{
-        visibility: hidden;
-    }
-
-    #sec-section{
-        text-align: center;
-        margin-top: 100px;
-    }
-
-    #section-two{
-        display: flex;
-        flex-direction: column;
-    }
-
-    #section-two .illustrate{
-        display: none;
-    }
-
-    #section-two .illustrate-mobile{
-        width: 600px;
-        height: 480px;
-        order: -1;
-        margin: 0 auto;
-    }
-
-    h2{
-        font-size: 2.5rem;
-        padding-bottom: 20px;
-    }
-
-    h3{
-        font-size: 2.5rem;
-        padding:0 150px;
-        line-height: 45px;
-        margin-top: 65px;
-    }
-    
-    p{
-        font-size: 1.7rem;
-        line-height: 43px;
-        padding:0 60px;
-        margin-top: -15px;
-    }
-
-    #section-three{
-        position: relative;
-        margin-top: 400px;
-    }
-
-    #third{
-        position: relative;
-        height: 970px;
-        overflow: hidden;
-        border-bottom-left-radius: 150px;
-        border-top-right-radius: 150px;
-        background-color: hsla(226, 48%, 12%, 0.842);
-        
-    }
-    
-    #third .circles{
-        position: absolute;
-        width: 700px;
-        height: 700px;
-        overflow: hidden;
-        margin-top: -250px;
-        right: 50px;
-        left: -65px;
-    }
-    
-    #section-three .phones{
-        position: absolute;
-        top: -300px;
-    }
-
-    #third #third-content{
-        margin: auto 0;
-        color: hsl(0, 0%, 98%);
-        text-align: center;
-        position: absolute;
-        margin-top: 320px;
-    }
-    
-    #third #third-content h2{
-        font-size: 3.3rem;
-    }
-    
-    #third #third-content p{
-        font-size: 1.7rem;
-        line-height: 43px;
-        padding:0 60px;
-        margin-top: -35px;
-    }
-    
-    #fourth-section{
-        margin-top: 110px;
-        border: 1px solid red;
-    }
-
-    #fourth-section .laptop{
-        display: none;
-    }
-    
-    #fourth-section .mobile-laptop{
-        width: 600px;
-        height: 450px;
-        
-    }
-    
-    #fourth-section #content-four{
-        margin: auto 0;
-        margin-top: 30px;
-        text-align: center;
-    }
-    
-    #fourth-section #content-four h3{
-        padding: 0;
-    }
-
-    #footer{
-        color: hsl(240, 2%, 79%);
-        background-color: hsl(240, 10%, 16%);
-        margin-top: 80px;
-        border-top-right-radius: 150px;
-        height: 760px;
-        padding: 30px 0;
-    }
-    
-    #footer #footer-content{
-        display: flex;
-        flex-direction: column;
-        margin: 30px auto;
-        width: 100px;
-    }
-    
-    #footer #footer-content ul{
-        margin-top: 0;
-    }
-    
-    #footer .footer-logo{
-        padding-bottom: 50px;
-        text-align: center;
-        margin-left: 12px;
-        height: 30px;
-        width: 80px;
-    }
-    
-    #footer #footer-content li{
-        text-align: center;
-        padding: 7px 0;
-        margin-left: -30px;
-        font-size: 1.3rem;
-    }
-    
-    #footer #footer-content li:nth-of-type(1){
-        font-weight: bold;
-        margin-bottom: 15px;
-        font-size: 1rem;
-    }
-    
-    .product-hidden{
-        display: none;
-    }
-    
-    
-    .company-hidden{
-       display: none;
-    }
-    
-    
-    .connect-hidden{
-       display: none;
-    }
-    
-    .mobile-modal{
-        position: absolute;
-        top: 85px;
-        left: 40px;
-        background-color: hsl(0, 0%, 98%);
-        width: 87%;
-        border-radius: 7px;
-        height: 650px;
-        box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.418);
-    
-    }
-
-    .mobile-modal #all-modal-content{
-        text-align: center;
-        height: 380px;
-        width: 85%;
-        margin-top: 30px;
-    }
-
-    .arrow-red{
-        margin-left: 5px;
-    }
-
-    .mobile-modal #all-modal-content a{ 
-        color: black;
-        text-decoration: none;
-        margin-left: -30px;
-        
-    }
-
-    .mobile-modal #all-modal-content .product-drop{
-        background-color: rgba(230, 230, 230, 0.712);
-        border-radius: 7px;
-        width: 90%;
-        margin: 0 auto;
-        padding: 5px 0;
-        margin-bottom: 5px;
-    }
-
-    .mobile-modal #all-modal-content .product-drop-hidden{
-       display: none;
-    }
-
-
-
-    .mobile-modal #all-modal-content .company-drop{
-        background-color: rgba(230, 230, 230, 0.712);
-        border-radius: 7px;
-        width: 90%;
-        margin: 0 auto;
-        padding: 5px 0;
-        margin-bottom: 10px;
-    }
-
-    .mobile-modal #all-modal-content .company-drop-hidden{
-        display: none;
-     }
-
-    .mobile-modal #all-modal-content .connect-drop{
-        background-color: rgba(230, 230, 230, 0.712);
-        border-radius: 7px;
-        width: 90%;
-        margin: 0 auto;
-        padding: 10px 0;
-    }
-
-    .mobile-modal #all-modal-content .connect-drop-hidden{
-        display: none;
-     }
-
-     #all-modal-content .product-drop li{
-        padding: 0;
-        margin: 0px 0;
-        font-size: 2.3rem;
-        font-weight: bold;
-    }
-
-    .product .product-drop a{
-        padding: 8px 0;
-        display: block;
-    }
-
-    #all-modal-content .company-drop li{
-        padding: 0;
-        margin: 0 0;
-        font-size: 2.3rem;
-        font-weight: bold;
-    }
-
-    .company .company-drop a{
-        padding: 5px 0;
-        display: block;
-    }
-
-    #all-modal-content .connect-drop li{
-        padding: 0;
-        margin: 0 0;
-        font-size: 2.3rem;
-        font-weight: bold;
-    }
-
-    .connect .connect-drop a{
-        padding: 5px 0;
-        display: block;
-    }
-
-    .mobile-modal #butts{
-        display: flex;
-        flex-direction: column;
-        width: 30%;
-        margin: 60px auto 0;
-        
-    }
-    
-    .mobile-modal #butts .signup{
-        color: hsl(0, 0%, 98%);
-        background-color: hsl(356, 100%, 66%);;
-        font-weight: bold;
-        padding: 1.2rem 3rem;
-        border-radius: 50px;
-        font-size: 1.1rem;
-        border: none;
-    }
-
-} */
